--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
-        
+          <li class="nav-item">
+            <!-- dark mdoe -->
+            <div class="style-switcher-item">
+              <div class="form-check form-switch">
+                <input class="form-check-input js-dark-mode" type="checkbox" role="switch" id="dark-mode">
+                <label class="form-check-label" for="dark-mode"></label>
+              </div>
+            </div>
+          </li>
         </ul>
         <a href="./donate.html" class=" btn btn-imp ms-lg-3">Donate</a>
       </div>
@@ -498,6 +506,8 @@
       </div>
     </div>
  </footer>
+
+ 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
