--- a/ouractions.html
+++ b/ouractions.html
@@ -4,81 +4,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Actions</title>
+    <title>Our Mission</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
-  <!-- Navibar -->
-  <nav class="navbar navbar-expand-lg bg-white sticky-top">
-    <div class="container">
-      <a class="navbar-brand img" href="#">
-        <img src="./assets/images/logo.png">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+<!-- Navibar -->
+<nav class="navbar navbar-expand-md bg-white sticky-top">
+  <div class="container">
+    <a class="navbar-brand img" href="../movimentgrafitti-redesign/index.html">
+      <img src="./assets/images/logo.png">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
 
-          <li class="nav-item body">
-            <a class="nav-link" href="./ouractions.html">Our Actions</a>
-          </li>
-          <li class="nav-item body">
-            <a class="nav-link" href="./ourmission.html">Our Mission</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./news.html">News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./events.html">Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./joinus.html">Join Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./contact.html">Contact</a>
-          </li>
-        
-        </ul>
-        <a href="./donate.html" class=" btn btn-imp ms-lg-3">Donate</a>
-      </div>
+        <li class="nav-item body">
+          <a class="nav-link" href="./ouractions.html">Our Actions</a>
+        </li>
+        <li class="nav-item body">
+          <a class="nav-link" href="./ourmission.html">Our Mission</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./news.html">News</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./events.html">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./joinus.html">Join Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contact.html">Contact</a>
+        </li>
+      
+      </ul>
+      <a href="./donate.html" class=" btn btn-imp ms-lg-3">Donate</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
+<!-- hero section js-->
+<section class="hero-section-2">
+  <div class="hero-image-2"></div>
+  <div class="hero-text-2">
+    <h1 data-aos="fade-left" class="text-white">OUR ACTIONS</h1>
+    <p data-aos="fade-right" class="text-white">We are dedicated to...</p>
+  </div>
+</section>
 
-
-<section class="section-padding">
+<!-- filters -->
+<section class="p-lg-3">
+<div id="filters" class="">
+  <button class="btn btn-filter">Show All</button>
+  <button class="btn btn-filter">Environment</button>
+  <button class="btn btn-filter">Gender</button>
+  <button class="btn btn-filter">Public Safety</button>
+  <button class="btn btn-filter">Other</button>
+</div>
+</section>
   <!-- post -->
+  <section id="actionpost" class="section-padding">
+    <div class="container">
   <div class="row">
-    <div class="col-sm-6">
-        <div class="card">
+    <div class="col-sm-6 g-4">
+        <div class="card theme-shadow">
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                        <a href="#" class="btn btn-dark">Read More</a>
+                        <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
+                        <h5>Title description, May 7, 2023</h5>
+                        <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
+                        <a href="#">Read More</a>
                     </div>
-                    <div class="col-sm-6 text-right">
-                        <img class="" src="//placehold.it/200" alt="sans" width="200px">
+                    <div class="card col-sm-6 text-right">
+                        <img class="" src="../movimentgrafitti-redesign/assets/images/ouractions/riot-g3dfc08a90_1920.jpg" alt="" width="500px">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-</section>
-
-
+  </div>
+  </div>
+  </section>
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+</body>
 </html>
