--- a/ouractions.html
+++ b/ouractions.html
@@ -197,7 +197,81 @@
   </div>
  </section>
 
+ <!-- footer -->
+ <footer class="bg-dark">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row gy-5">
+        <div class="col-auto">
+          <a href="#"><img src="../movimentgrafitti-redesign/assets/images/logo-light.png" alt="" style="width: 120px;"></a>
+          <div class="line"></div>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet incidunt ipsum laudantium blanditiis, veniam voluptas.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <h5 class="text-white fw-bold">REPORTS</h5>
+          <div class="line"></div>
+          <ul>
+            <li><a href="#">Terms and Conditions</a></li>
+            <li><a href="#">Cookies Policy</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Imprint</a></li>
+            <li><a href="#">Annual Report</a></li>
+          </ul>
+          </div>
+        <div class="col-lg-4">
+          <h5 class="text-white fw-bold">CONTACT</h5>
+          <div class="line"></div>
+          <ul>
+            <li>Email: info@movimentgraffitti.org</li>
+            <li>Tel: +356 0000000</li>
+            <li>Address: 20, Triq il-Liberta, Malta</li>
+          </ul>
+        </div>
+          <div class="col-lg-4">
+            <ul>
+        <form class="gy-4 text-white">
+          <div>
+            <h4 class="fw-bold">SUBSCRIBE TO OUR NEWSLETTER!</h4>
+            <div class="line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur autem quam pariatur officia esse non.</p>
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          </div>
+            <button type="submit" class="btn btn-imp mt-4">Subscribe</button>
+        </form>
+      </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-auto">
+            <div class="social-icons">
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href=""><i class="ri-instagram-fill"></i></a>
+              <a href=""><i class="ri-linkedin-fill"></i></a>
+            </div>
+        </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="row g-4 justify-content-between">
+        <div class="col-auto">
+          <p class="mb-0">Copyright Moviment Graffitti. All Rights Reserved</p>
+        </div>
 
+        </div>
+        <div class="col-auto">
+          <p class="mb-0">Designed by <a href="#">Carla Polizzi</a></p>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+</footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
