--- a/joinus.html
+++ b/joinus.html
@@ -60,17 +60,17 @@
   </nav>
 
   <!-- HERO -->
-<section class="hero-section-2">
-  <div class="hero-image-2"></div>
-  <div class="hero-text-2">
-    <h1 data-aos="fade-left" class="text-white">JOIN US</h1>
+<section class="hero-section-joinus">
+  <div class="hero-image-joinus"></div>
+  <div class="hero-text-joinus">
+    <h1 data-aos="fade-left" class="text-white display-1 fw-bold">JOIN US</h1>
     <p data-aos="fade-right" class="text-white">We are dedicated to...</p>
   </div>
 </section>
 
 
   <!-- WAYS TO GET INVOLVED -->
-  <section class="section-padding">
+  <section class="p-lg-5 section-padding">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
@@ -176,10 +176,10 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+</body>
 </html>
